--- a/src/gui/UserScreen.fxml
+++ b/src/gui/UserScreen.fxml
@@ -16,19 +16,110 @@
    <children>
       <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="1366.0" style="-fx-background-color: linear-gradient(from 25% 25% to 100% 100%, #010a06, #05120c, #010a06);" HBox.hgrow="ALWAYS">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="300.0" style="-fx-border-color: white; -fx-border-radius: 18 18 18 18;">
+            <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: white; -fx-border-radius: 18 18 18 18;">
                <HBox.margin>
                   <Insets bottom="90.0" left="20.0" right="20.0" top="90.0" />
                </HBox.margin>
                <children>
-                  <Label text="Galo Cego" textAlignment="CENTER" textFill="WHITE">
+                  <Label fx:id="lblJogador" alignment="TOP_CENTER" text="Jogador" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Bodoni MT" size="28.0" />
                      </font>
                      <VBox.margin>
-                        <Insets top="60.0" />
+                        <Insets bottom="20.0" top="40.0" />
                      </VBox.margin>
                   </Label>
+                  <VBox>
+                     <children>
+                        <Label text="Nome" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtNome" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Nome do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Ocupação" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtOcupacao" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Ocupação do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Idade" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtIdade" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Idade do Personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Sexo" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtSexo" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Sexo do personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label text="Local de nascimento" textFill="WHITE">
+                           <font>
+                              <Font name="Bodoni MT" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtLocalNascimento" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Local de nascimento do personagem">
+                           <font>
+                              <Font name="Bodoni MT" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="692.0" HBox.hgrow="ALWAYS">
