--- a/bin/gui/UserScreen.fxml
+++ b/bin/gui/UserScreen.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -36,7 +38,7 @@
                               <Font name="Bodoni MT" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtNome" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Nome do Personagem">
+                        <TextField fx:id="txtNome" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Nome do Personagem">
                            <font>
                               <Font name="Bodoni MT" size="14.0" />
                            </font>
@@ -56,7 +58,7 @@
                               <Font name="Bodoni MT" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtOcupacao" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Ocupação do Personagem">
+                        <TextField fx:id="txtOcupacao" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Ocupação do Personagem">
                            <font>
                               <Font name="Bodoni MT" size="14.0" />
                            </font>
@@ -76,7 +78,7 @@
                               <Font name="Bodoni MT" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtIdade" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Idade do Personagem">
+                        <TextField fx:id="txtIdade" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Idade do Personagem">
                            <font>
                               <Font name="Bodoni MT" size="14.0" />
                            </font>
@@ -93,7 +95,7 @@
                               <Font name="Bodoni MT" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtSexo" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Sexo do personagem">
+                        <TextField fx:id="txtSexo" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Sexo do personagem">
                            <font>
                               <Font name="Bodoni MT" size="14.0" />
                            </font>
@@ -110,7 +112,7 @@
                               <Font name="Bodoni MT" size="20.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtLocalNascimento" editable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Local de nascimento do personagem">
+                        <TextField fx:id="txtLocalNascimento" editable="false" focusTraversable="false" style="-fx-text-fill: white; -fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0 0 1 0;" text="Local de nascimento do personagem">
                            <font>
                               <Font name="Bodoni MT" size="14.0" />
                            </font>
@@ -136,6 +138,38 @@
                      <VBox.margin>
                         <Insets bottom="60.0" />
                      </VBox.margin>
+                     <children>
+                        <VBox alignment="BOTTOM_RIGHT" prefHeight="554.0" prefWidth="768.0">
+                           <children>
+                              <AnchorPane prefHeight="469.0" prefWidth="726.0">
+                                 <children>
+                                    <Circle fx:id="btInventory" fill="DODGERBLUE" layoutX="880.0" layoutY="532.0" radius="22.0" stroke="#4d4d4d00" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-opacity: 0.4;" />
+                                    <VBox fx:id="vboxInventory" alignment="CENTER" layoutX="608.0" layoutY="219.0" prefHeight="291.0" prefWidth="250.0" visible="false">
+                                       <children>
+                                          <TableView fx:id="tbItems" focusTraversable="false" prefHeight="238.0" prefWidth="250.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838;" stylesheets="@../css/tableviewstyle.css">
+                                            <columns>
+                                              <TableColumn fx:id="columnItem" editable="false" prefWidth="157.0" resizable="false" />
+                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="67.0" resizable="false" />
+                                            </columns>
+                                             <padding>
+                                                <Insets bottom="20.0" left="10.0" right="10.0" />
+                                             </padding>
+                                          </TableView>
+                                          <TextField fx:id="txtItems" focusTraversable="false" minHeight="30.0" prefHeight="50.0" prefWidth="250.0" promptText="Adicione um item" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
+                                             <padding>
+                                                <Insets left="20.0" right="20.0" />
+                                             </padding>
+                                             <font>
+                                                <Font name="Arial" size="14.0" />
+                                             </font>
+                                          </TextField>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                           </children>
+                        </VBox>
+                     </children>
                   </HBox>
                </children>
             </VBox>
@@ -254,25 +288,33 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <ListView fx:id="listView" focusTraversable="false" prefHeight="238.0" prefWidth="250.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838;" stylesheets="@../css/listview.css">
-                     <VBox.margin>
-                        <Insets left="20.0" right="20.0" top="20.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                     </padding>
-                  </ListView>
-                  <TextField fx:id="txtMsg" focusTraversable="false" minHeight="30.0" onAction="#onTxtMsg" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
-                     <VBox.margin>
-                        <Insets bottom="40.0" left="20.0" right="20.0" />
-                     </VBox.margin>
-                     <padding>
-                        <Insets left="20.0" right="20.0" />
-                     </padding>
-                     <font>
-                        <Font name="Arial" size="14.0" />
-                     </font>
-                  </TextField>
+                  <HBox prefHeight="341.0" prefWidth="290.0">
+                     <children>
+                        <VBox prefHeight="315.0" prefWidth="290.0">
+                           <children>
+                              <ListView fx:id="listView" focusTraversable="false" prefHeight="238.0" prefWidth="250.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838;" stylesheets="@../css/listview.css">
+                                 <VBox.margin>
+                                    <Insets left="20.0" right="20.0" top="20.0" />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+                                 </padding>
+                              </ListView>
+                              <TextField fx:id="txtMsg" focusTraversable="false" minHeight="30.0" onAction="#onTxtMsg" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
+                                 <VBox.margin>
+                                    <Insets bottom="40.0" left="20.0" right="20.0" />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets left="20.0" right="20.0" />
+                                 </padding>
+                                 <font>
+                                    <Font name="Arial" size="14.0" />
+                                 </font>
+                              </TextField>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                </children>
                <HBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
