--- a/bin/gui/UserScreen.fxml
+++ b/bin/gui/UserScreen.fxml
@@ -149,7 +149,7 @@
                                           <TableView fx:id="tbItems" focusTraversable="false" prefHeight="238.0" prefWidth="250.0" style="-fx-border-color: transparent; -fx-background-radius: 20 20 0 0; -fx-focus-color: transparent; -fx-background-color: #383838;" stylesheets="@../css/tableviewstyle.css">
                                             <columns>
                                               <TableColumn fx:id="columnItem" editable="false" prefWidth="157.0" resizable="false" />
-                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="67.0" resizable="false" />
+                                              <TableColumn fx:id="columnButton" editable="false" prefWidth="60.0" resizable="false" />
                                             </columns>
                                              <padding>
                                                 <Insets bottom="20.0" left="10.0" right="10.0" />
@@ -300,7 +300,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                                  </padding>
                               </ListView>
-                              <TextField fx:id="txtMsg" focusTraversable="false" minHeight="30.0" onAction="#onTxtMsg" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
+                              <TextField fx:id="txtMessage" focusTraversable="false" minHeight="30.0" onAction="#onTxtMessage" prefHeight="50.0" prefWidth="258.0" promptText="Digite aqui" style="-fx-border-color: transparent; -fx-background-radius: 0 0 20 20; -fx-focus-color: transparent; -fx-faint-color: transparent; -fx-background-color: #383838; -fx-border-color: #4f4f4f; -fx-border-width: 1 0 0 0; -fx-text-fill: white;">
                                  <VBox.margin>
                                     <Insets bottom="40.0" left="20.0" right="20.0" />
                                  </VBox.margin>
